# memo-asn1c

./: 01_编译安装.md  02_使用命令.md  03_接口函数.md  04_使用问题.md  0b_语法结构.md  0c_编码规则.md  README.md  asn1练习.asn1  asn1结构.md  asn1编码规则.md  使用asn1c命令.md  使用asn1c编码.md  使用asn1c问题.md
t/: rectangle.asn1
u/CertBase/: CMakeLists.txt  CertBase.c  README.md
u/CertGbTbs/: CMakeLists.txt  README.md  coer_decode_crl.c
u/LteV2xScms/: CMakeLists.txt  README.md  ScopedLocalCertificateChainFiles.coer  coer_decoder.cpp  test_encoder.cpp  v2x.asn1
u/LteV2xScms/testfile/: CrlContents.coer  ScopedEeEnrollmentCertResponse.coer  ScopedElectorEndorsement.coer  ScopedIdCertProvisioningAck.coer  ScopedPseudonymCertProvisioningAck.coer  SecuredPseudonymCertProvisioningAck.coer  SecuredRACertRequest.coer  SecuredRACertResponse.coer  SignedAuthenticatedDownloadRequest.coer  SignedPseudonymCertProvisioningAck.coer  ToBeSignedEncryptedCertificateResponse.coer
u/MyTypes/: CMakeLists.txt  MyTypes.asn1  MyTypes_der_decode.c  MyTypes_der_encode.c  README.md
u/Rectangle/: CMakeLists.txt  README.md  Rectangle_der_decode.c  Rectangle_oer_decode.c  Rectangle_oer_encode.c
编码示例/CertBase/: CertBase.asn1
编码示例/CertGbTbs/: GB_T.asn  coer_Ieee1609Dot2Content.c  coer_decode_its.c  coer_encode_crl.c  coer_encode_its.c  coer_encode_its_ex.c  coer_encode_its_stack.c  coer_encode_tobesignedcrl.c
编码示例/LteV2xScms/: CMakeLists.txt  coer_encode.c  hex.txt
编码示例/LteV2xScms/testfile/: Certificate.coer  ScopedEeRaCertRequest.coer  ScopedRaEeCertResponse.coer  SecuredPseudonymCertProvisioningRequest.coer  SignedCertificateRequest.coer  SignedCertificateRequest.ecreq.coer  SignedCertificateRequest.pcdownload.coer  SignedCertificateRequest.rapseureq.coer  SignedEeEnrollmentCertRequest.coer  SignedEeEnrollmentCertResponse.coer  SignedIdCertProvisioningAck.coer  SignedIdCertProvisioningRequest.coer  SignedLocalCertificateChainFiles.coer  SignedPseudonymCertProvisioningRequest.coer  SignerIdentifier.coer
编码示例/Rectangle/: CMakeLists.txt  Rectangle.asn1  Rectangle_der_decode.c  Rectangle_der_encode.c
